# ChangeLog for net-libs/libpcapnav
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcapnav/ChangeLog,v 1.11 2014/08/14 17:12:14 phajdan.jr Exp $

  14 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> libpcapnav-0.8.ebuild:
  x86 stable wrt bug #517422

  18 Jul 2014; Jeroen Roovers <jer@gentoo.org> libpcapnav-0.8.ebuild,
  +files/libpcapnav-0.8-includes.patch:
  EAPI bump. Do not build test programs and set RESTRICT=test since they fail
  anyway. Fix missing includes. Add USE=static-libs.

  12 Mar 2014; Patrick Lauer <patrick@gentoo.org> libpcapnav-0.7.ebuild,
  libpcapnav-0.8.ebuild:
  Shorten description for improved repoman happy

  21 Mar 2008; Markus Meier <maekke@gentoo.org> libpcapnav-0.8.ebuild:
  amd64 stable, needed for bug #201842

*libpcapnav-0.8 (05 Jan 2008)

  05 Jan 2008; Markus Ullmann <jokey@gentoo.org> +libpcapnav-0.8.ebuild:
  Version bump wrt bug #200450

  06 Nov 2007; Raúl Porcel <armin76@gentoo.org> libpcapnav-0.7.ebuild:
  Add ~sparc

  01 Apr 2007; Marcelo Goes <vanquirius@gentoo.org> libpcapnav-0.7.ebuild:
  Mark 0.7 x86 stable.

  28 Nov 2006; Markus Ullmann <jokey@gentoo.org> -libpcapnav-0.6.ebuild,
  libpcapnav-0.7.ebuild:
  Cleanup

*libpcapnav-0.7 (18 Feb 2006)

  18 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> -libpcapnav-0.5.ebuild,
  libpcapnav-0.6.ebuild, +libpcapnav-0.7.ebuild:
  0.7 version bump. virtual/libpcap -> net-libs/libpcap.

*libpcapnav-0.6 (14 May 2005)

  14 May 2005; Marcelo Goes <vanquirius@gentoo.org> +libpcapnav-0.6.ebuild:
  Version bump.

*libpcapnav-0.5 (16 Mar 2005)

  16 Mar 2005; Aaron Walker <ka0ttic@gentoo.org> +metadata.xml,
  +libpcapnav-0.5.ebuild:
  Initial commit. Thanks to soulse in bug 84895 for the ebuild.