@@ -1,11 +1,0 @@
-DEFINED_PHASES=install
-DEPEND=net-libs/libpcap
-DESCRIPTION=Libpcap wrapper library to navigate to arbitrary packets in a tcpdump trace file
-HOMEPAGE=http://netdude.sourceforge.net/
-IUSE=doc
-KEYWORDS=~amd64 ~sparc x86
-LICENSE=BSD
-RDEPEND=net-libs/libpcap
-SLOT=0
-SRC_URI=mirror://sourceforge/netdude/libpcapnav-0.7.tar.gz
-_md5_=bbbdc23adf4e2df9ae01b0e02e13cdfd
