@@ -3,10 +3,10 @@ DEPEND=sys-apps/dbus sys-auth/polkit sys-libs/libcap virtual/pkgconfig
 DESCRIPTION=Realtime Policy and Watchdog Daemon
 EAPI=4
 HOMEPAGE=http://0pointer.de/blog/projects/rtkit
-KEYWORDS=alpha amd64 arm ia64 ppc ppc64 sh sparc x86
+KEYWORDS=alpha amd64 arm hppa ia64 ppc ppc64 sh sparc x86
 LICENSE=GPL-3 BSD
 RDEPEND=sys-apps/dbus sys-auth/polkit sys-libs/libcap
 SLOT=0
 SRC_URI=http://0pointer.de/public/rtkit-0.10.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=85d34ee1037d42498a68de4bd64c7595
+_md5_=7c3bae0d5289f924b24d77b9e2b32bb7
