@@ -3,10 +3,10 @@ DEPEND=sys-apps/dbus sys-auth/polkit sys-libs/libcap virtual/pkgconfig !<sys-dev
 DESCRIPTION=Realtime Policy and Watchdog Daemon
 EAPI=5
 HOMEPAGE=http://0pointer.de/blog/projects/rtkit
-KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86
 LICENSE=GPL-3 BSD
 RDEPEND=sys-apps/dbus sys-auth/polkit sys-libs/libcap
 SLOT=0
 SRC_URI=http://0pointer.de/public/rtkit-0.11.tar.xz
 _eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=87e64cd43d47a5fce7120ffead2f4e7f
+_md5_=a285ba7f7c6afd9078ecdc07a9152385
