@@ -2,26 +2,14 @@
 Hash: SHA256
 
 AUX libpcapnav-0.8-includes.patch 395 SHA256 0cd3f442e2e60ad27b53b81a6321b9d5e564e63eb920ac33f7e2f4a8805c644c SHA512 04570a0f0b5c33565e79922e878171bb98640d2961cc9378c64e17a7144636960fe099bcca4c043d8a4532b98fe7960fdfa24af8145df5c8682af4dcc5d9b99c WHIRLPOOL e633519a8a65ab68a91aabd7bacd6ec33b74f14f02d99f019ea965b7dddf2b821c0b0d496546f41675fb2d086769948fd6d120d62e1e123cb91b7f248ae85c76
-DIST libpcapnav-0.7.tar.gz 390455 SHA256 5860c6ad6ebcd0036a0ed6aadd0c3f2d5232fac3c5da1741a58d51a8e737c8e6
 DIST libpcapnav-0.8.tar.gz 387476 SHA256 11d6a4257cbc5a89aa73ce2aaa5b0fc17430f7279d0abb39ccaf3a411ba7e852 SHA512 bc0357d17228c157de5b480532df37a62459882d5a4fb8d2285fe4e86c1dca301e7cc505f2917bb3421d926bed263d93b2c587311431d9c3a5b02f04c93fdf18 WHIRLPOOL 08552c55bc6d2c80780b333e1ba0c476baa5d783c74309fe6e435cefae551b9d2a27040c66e2f27ee21a8679f48a3fe8f258a9efc64873fbda806656e339a974
-EBUILD libpcapnav-0.7.ebuild 709 SHA256 bf25853233438ec2e3b9cba802c67ad21ebcf0b72efec29c3c7a60eaba562606 SHA512 603a774714b7c5e38a5dae054024416d48a70c83421695b8993e5bb735c7a7c3ddc87354e02d7781f8591ec6c519b99e1ee9299c15fb585cb06210f84ebc8173 WHIRLPOOL 59fced64cfd6a035cc0cc0ba3d695fa094f0d253d9c22781801b4aa1099838ab5fd71a0e1bef4f6fc0fb1cafa40f6973c9fede9f1756bc9d51bdb851b115d2ea
 EBUILD libpcapnav-0.8.ebuild 925 SHA256 b996a45ab4cab1440ab43e4c5a873871b7b0821abcc9f3a8f2cb6bab93570a4e SHA512 6a79c41d19d6c8f8d3c41ea9c8406d6cb08e51272c44783832c47b979da1efd575b8d9e3ba8699f19acf61d453fa54d6a9610b59746f710f006e89e129a7edb2 WHIRLPOOL 87ddb06163f6cf080161cd84dc5a376ea6270c7e1f0fd2440962359f19160f7de69ef72134e1984c7d7b61a0fbfaab876c7758705181d8cf0a411a976cc96d39
-MISC ChangeLog 1778 SHA256 4ec5a279d360358f9ebe4abc7ce0af758709700e70df51813095fe1bf4ed3768 SHA512 32f8f95ea7f809d63e797e25b9c04d5b8618a7407e6ca6c5a624ccd129f0f3ce1ad02fbe2f57ff12d86be14a21f81bc8bbf8ebb3ca5d8eb1fe8fe419f4f77995 WHIRLPOOL 4b3b083105ccbde14e0e073d645601ef2b60b55bf3a26b6b73d2410d06018f715634f1c576232a6d61dc783e94aae4477126dc41d2c9240a2ab7dcb14fc8290f
+MISC ChangeLog 1850 SHA256 12c26c82b7c602ae1901ae26fe4cf8dec55dbd9f0081be562ff7c4e858a0931f SHA512 07667233267e8bbe04885d793f25047c95f53fe8bc107c7ce3022f4cdd79eca240c9ec798bb7bb6b46ac401e00a80048dd7c401136c5023f365a3eee01ec6a6c WHIRLPOOL 6e8cc25153d36e872fbbd8195e2a643a6a968f80b75b6cae01eb8d99dabca140ff16673735b8958202e678935bbfde818600ea63e8f7c6e372f4ac2a1d65f068
 MISC metadata.xml 160 SHA256 39e232fc7ec88ca0b077cb3950cb39d15cd990842b88d5bfe14f02f34d72f37b SHA512 3ac3a74a7cdf45b14884d967b10e4752f9cb06c579f6d7baf921f9be5450cbe7536c2e5a480ac3c95156eb6abb32e68f74cecc86b9ac0dcc4e0e1b4b255c3e20 WHIRLPOOL f7504ce9e3e8a58d19bba5448305f806c2ae01d0a8d2cf09d6bc6a089a6e1c28a1b12a80bb6020584b5ed21df94e4936b1695a54548704cb8679660b6b807955
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT7O3vAAoJEE8aJVXqcZkd72oQAIA4ZhXxMiQjVEi2tUOIVuXd
-FCbGVMXLUO5kfNfie/MraCSxMZNOM/jnF/TlFb0tVbcutTvT2smLTAvWblNjCh4C
-foFFnx6byLUIiuRCtXnbnRgd21WEfQazjiV/1lu57P3nczUrnJPL3IXyCTiwFBty
-xVCaCLWQFsNLdI4fJW10czvD+AyKZ2wzrPKjHHTa4PZSWJGYDhJe1iRKnJQF6aRp
-dRjoKLJlfHIQqC6EeZVw+fnIyVm/JdzYJIGcxUveXMjPsMfdD5W4Ye/MuYslbzF3
-AfPQfp91wOr7hlBycfGShkY3X114c6fz7ITFH6iYuJWvPPgpoIIpNz9bML95DyzH
-v3IIDd33fcPU0YE4txcNkSq3IyAKbkgGSI3Cbdn8phS61Rs9GIeZmtJgMOLPNBmX
-wNhVTODSRsqqOxXpvEfjLx5HMAP2r017dPtXrnxJsD3pVGf4MOt1c+Si0o5wOcAN
-b5aA+zq/Dll4FG8s3p1lICHNBDEDvuYi2OMrkaun9NroRjaBKoiZZgQTIsbjaRab
-v7Krt3Vg2H9mrWtCa34vBjy6/7m8TOqBSVLWFAOLC1fEOGu7J3Ij6N0WsiWL3kEG
-DMyW3cjPmDJv1kTZ9WW45/+AyV9dG9Gt15aA8CDtehzra6KT+wF4lzFbH/LE6M5+
-JZwh72NnfQQelufdiV7u
-=W+3/
+iEYEAREIAAYFAlPtDx8ACgkQVWmRsqeSphMJwQCffpDM01u2vvU56D2LxcRN7a43
+87AAmwYj+CnMEUBeP+uoygrNSLfAzemY
+=rHwG
 -----END PGP SIGNATURE-----
