@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX rtkit-0.11-gettime.patch 744 SHA256 8e7f796228f334544544bf0bbd5db6095682a3776c5dbfd4a9a7565e866c6cd6 SHA512 b9207e1be512689e3896587105d135ab686d4eb1dd8c2e0feb62ca73eed2a8e1e473826e82b06bf240f26c64975b9793cd407cf6493a8f7eb6946da17198059c WHIRLPOOL d236a0695b2b1288e861be5a60ebc26af99d48727b05fb409ea3a49459d1dc5be0220f8c2335f3d7ead64e278bda36925d44ae23108dc72c8d81d39f374dee7f
 AUX rtkit-0.11-polkit.patch 2074 SHA256 80f33894e4eb2130460d7160f1a309c3497a235a3ec6f9e5d088b00cb1667b11 SHA512 cc4cb9879235398f828c16951e380e0456c9e5bbd5acc2a0968153c5ce361fd1aceeeeac8ab873c21c0556c5d4677cdad8ed9e23dd3b9b5a8a73cf9264ee5a4b WHIRLPOOL 1a5170423876ccc178c99a959212a5a352d7fa92bae0c1e3e9f6bae6f5603cc6c6013bba681eb7d09fc1d825aea550417706cacef6499c9caac21c15e128caff
 DIST rtkit-0.10.tar.gz 160528 SHA256 74ea93ac09d9d5a7cb85bf57ec92090311c9fb105a41bdd633adcf3b94472120 SHA512 bf5456f168dc1241b133e417c50fc10adfb40e246cf3c186bb07cd090486798cfda190183ba6b74e6e4cb096cd99b98f76373ed7959694836c558d1d7202cf40 WHIRLPOOL bd4e33e945df570a206c11af35ffc951772e5bd37e86ffef68510d27fd7245093d46d4218e6dd71cb8d5d2873ad37a261d03d55338c352fe5e195a4a582cb646
 DIST rtkit-0.11.tar.xz 126748 SHA256 68859108cff6410901502b58365eb7607da37110a06b837762f771735f58acd0 SHA512 4641af965dc64c0f498ae469fbee1ceb337204fa7d778fbbb41f2b5c5e88947e633c7e9ad037274fdd778c3c097a4a1dbb0b2add287d74eccbcd2d357cb2da22 WHIRLPOOL 7036f2811aeef28dd7680f24fcf16e2cf8708937d86a0dfcd1411fcae469be3fe673b12dc640f9cda9be951ab2879f2b7ec2374577e7a0b532c59d8abde176b5
-EBUILD rtkit-0.10.ebuild 1136 SHA256 0a6a8153a2d2d0d9b8d4391553905d08f958a9b22be4f0f03581c0364a6de7ba SHA512 813f0bc1be6fa3548a8345e0b12d1063d5a59b8396052b3048b9efab4dd13bbb640190efdb63da4885f0df0f1c03bc4f068e4a602007070d4e644b13e54254d9 WHIRLPOOL 5eedd583107fa5b1a2a0560f11f4dd987a4e0f8ecf20b5299ff1d273518a530ddb56ef35b8348dd91f6992d39170424fd2526b4b159a58a9b37ce2ca17a475ec
-EBUILD rtkit-0.11.ebuild 1262 SHA256 6aba3fdd20e983dadd111ecde08bf28a4e8a0b7e2b6d4c7a817e339b2a75f477 SHA512 e961218809ff7a5f1c70210c5fad63efaa7d6f832d7a691a1b7d2fb0913d11038c391a58a18a3be7f8476c12130f8c599a259d8e14706bafc04cbf97c13512d6 WHIRLPOOL 98cde2db20504dac6ff80cd42e9665c7573f2466621bc410811c8dfb4d5dfd03770d557673d58cb13a2acdd15944ea36e9ce1e780311bbe321028f3547e86d95
-MISC ChangeLog 4039 SHA256 17bdc82b62b54d7ac3b87eb37797b6527b02de288e830bd0c71c1bd96a14e9c8 SHA512 a9b3602f9049936833bb5664caa60a9fbfd506877200ec8370a839c95efbb025b518de596f562fa5d36f3b2cd562949c7fbb6b87e32ef735728b5d0ba2718cdf WHIRLPOOL 1fac7767645b6509da49cc4d8e8ec6198d10c3249117c3b4cfbacdfcb475b3bbd0f1d74694d575d276dc21f19e54c861606d2ebeab3d7ce81cdf4490e59e1bde
+EBUILD rtkit-0.10.ebuild 1141 SHA256 57887229a0b56094b61329a0e39d69729688598f09badacbf78551f34d9f1d75 SHA512 fd741914e0df28d45437ed521e9e98596cb4af69da6c363841c5fd8bb9308e2d57c0282eaba065afba85b430fd9f0465f5ae7405aff0b9685e926a65b1cb7389 WHIRLPOOL fd7b5c59f6b35f43c129bbf3047879e53a4bedcabcc270677a5c01ec1a32f5ec63f792cdf9c0d6f927d0e11fbc1b3c1f586f11d7ae37727a6274306f2d28c7f1
+EBUILD rtkit-0.11.ebuild 1266 SHA256 387b4488f4329f984d647ebffc3584883e704535cf46f5909792f75f1f661a15 SHA512 0ce18a4978594d004d4af0c369e3ce35b561b3b1541dd4ff962b74a69e6464636fb69e552978842356af3f96991149ae7a558c6aabc31ae6d7ea777aea5c3034 WHIRLPOOL 379a0d81d84518d0c3d99b181d8db0a8bdfbad9aefbecc519d97a1c374edc78d7c00c1e83c7c4b721942a8a797f99f5324e4bac87cfd93aaa6d1c73353c15b89
+MISC ChangeLog 4158 SHA256 121d74f4ca0f664efeb558ad5212b9fc9f8165fa81223d0fcbcc9b518262fff9 SHA512 ab5f7293fc7cd585adbfc168b6b89418b08d688cab8e169541fb98d354de11176de4e63b2ecd9b1c3a8681e2be5a6f8c3796106b713ab212d2ed10e97a7a6410 WHIRLPOOL ff96e2ac39f6a10078ed16da30d5e82bc39f4a29e8dcace6ad29c58bea31f3e89cc86865c08ff32746029ceeea29d3a7cbe5a01e80ef45b14795223f7b882bd2
 MISC metadata.xml 436 SHA256 e8431c18723d59b5ec2f4a10742ece084b391903fa6d6825d2e2db2bdbae0e94 SHA512 70b64fff7fd07781ea481bbb79171b43ec95637d072026dc3e62b4b9ac3165a7a2a6c4e8cf20b36e9312b41115a70c07e22a6d3dda506fe1f975ea43ca62e132 WHIRLPOOL 7158d6f4e106f0a93493ca0dd4d4b3694b490a48116cc7ea962a155488ddc58dfcd658ec69100b69f6925b949275ec6e841193b6b9e2ad03e05bb17aa46a9490
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlPtD28ACgkQVWmRsqeSphMCNQCfSfEIUuO3xCxQs3JCxLRj3GeS
+HqMAn2mfOWD5LINShoZ2jAwFu14ITKOq
+=QK8D
+-----END PGP SIGNATURE-----
