@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libpcapnav
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcapnav/ChangeLog,v 1.11 2014/08/14 17:12:14 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcapnav/ChangeLog,v 1.12 2014/08/14 19:33:50 jer Exp $
+
+  14 Aug 2014; Jeroen Roovers <jer@gentoo.org> -libpcapnav-0.7.ebuild:
+  Old.
 
   14 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> libpcapnav-0.8.ebuild:
   x86 stable wrt bug #517422
